--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Costa tours</title>
-    <link rel="icon" href="../IMG/icono2-removebg-preview.png">
+    <link rel="icon" href="">
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
      
@@ -58,24 +58,24 @@
 
     <div class="slider">
         <div class="slider-track">
-            <div class="slide"><img src="../img2/1.jpg" alt=""></div>
-            <div class="slide"><img src="../img2/2.jpg" alt=""></div>
-            <div class="slide"><img src="../img2/3.jpg" alt=""></div>
-            <div class="slide"><img src="../img2/4.jpg" alt=""></div>
-            <div class="slide"><img src="../img2/5.jpg" alt=""></div>
-            <div class="slide"><img src="../img2/6.jpg" alt=""></div>
-            <div class="slide"><img src="../img2/7.jpg" alt=""></div>
-            <div class="slide"><img src="../img2/8.jpg" alt=""></div>
-            <div class="slide"><img src="../img2/9.jpg" alt=""></div>
+            <div class="slide"><img src="IMG/1.jpg" alt=""></div>
+            <div class="slide"><img src="IMG/2.jpg" alt=""></div>
+            <div class="slide"><img src="IMG/3.jpg" alt=""></div>
+            <div class="slide"><img src="IMG/4.jpg" alt=""></div>
+            <div class="slide"><img src="img/5.jpg" alt=""></div>
+            <div class="slide"><img src="img/6.jpg" alt=""></div>
+            <div class="slide"><img src="img/7.jpg" alt=""></div>
+            <div class="slide"><img src="img/8.jpg" alt=""></div>
+            <div class="slide"><img src="img/9.jpg" alt=""></div>
 
-            <div class="slide"><img src="../img2/2.jpg" alt=""></div>
-            <div class="slide"><img src="../img2/3.jpg" alt=""></div>
-            <div class="slide"><img src="../img2/4.jpg" alt=""></div>
-            <div class="slide"><img src="../img2/5.jpg" alt=""></div>
-            <div class="slide"><img src="../img2/6.jpg" alt=""></div>
-            <div class="slide"><img src="../img2/7.jpg" alt=""></div>
-            <div class="slide"><img src="../img2/8.jpg" alt=""></div>
-            <div class="slide"><img src="../img2/9.jpg" alt=""></div>
+            <div class="slide"><img src="IMG/1.jpg" alt=""></div>
+            <div class="slide"><img src="IMG/2.jpg/3.jpg" alt=""></div>
+            <div class="slide"><img src="IMG/3.jpg/4.jpg" alt=""></div>
+            <div class="slide"><img src="IMG/4.jpg/5.jpg" alt=""></div>
+            <div class="slide"><img src="IMG/5.jpg/6.jpg" alt=""></div>
+            <div class="slide"><img src="IMG/6.jpg/7.jpg" alt=""></div>
+            <div class="slide"><img src="IMG/7.jpg/8.jpg" alt=""></div>
+            <div class="slide"><img src="IMG/8.jpg/9.jpg" alt=""></div>
         </div>
     </div>
 
